# garmin_mcp

./: README.md  pyproject.toml
src/garmin_mcp/: __init__.py  connector_info.py  strength_exercise_catalog.py  strength_workouts.py  workout_builders.py  workout_templates.py  workouts.py
tests/: conftest.py  test_strength_workouts.py
tests/integration/: test_calendar_refresh.py  test_calendar_refresh_postcondition.py  test_workouts_tools.py
tests/unit/: test_running_workouts.py
